--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -24,14 +24,18 @@
             <div class="container-fluid">
                 <div class="row pb-sm-0 pb-md-2">
                     <div class="col-12 pb-sm-2">
-                       <div class="card">
-                           <img class="card-img" src="/img/patient-management-system.jpg" alt="Patient Management System"/>
-                           <div class="card-img-overlay text-white d-flex flex-column justify-content-center">
-                               <h4 class="card-title">Patient Management System</h4>
-                               <h6 class="card-subtitle mb-2">Full Stack MERN</h6>
-                               <p class="card-text text-warning">Work in progress <i class="fas fa-exclamation-triangle"></i></p>
-                           </div>
-                       </div>
+                        <div class="card">
+                            <img class="card-img" src="/img/patient-management-system.jpg"
+                                 alt="Patient Management System"/>
+                            <div class="card-img-overlay text-white d-flex flex-column justify-content-center">
+                                <div class="bg-dark p-2 w-50">
+                                    <h4 class="card-title">Patient Management System</h4>
+                                    <h6 class="card-subtitle mb-2">Full Stack MERN</h6>
+                                    <p class="card-text text-warning">Work in progress <i
+                                            class="fas fa-exclamation-triangle"></i></p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row pb-sm-0 pb-md-2">
@@ -40,10 +44,15 @@
                             <img class="card-img" src="/img/chopnchange.jpg" alt="Chop 'n' Change"/>
                             <div class="card-img-overlay text-white d-flex flex-column justify-content-center">
                                 <a class="text-decoration-none" href="https://group3-recipe-search.herokuapp.com/">
-                                    <h4 class="card-title text-warning">Chop 'n' Change</h4>
-                                    <h6 class="card-subtitle mb-2">Full Stack MERN</h6>
+                                    <div class="bg-dark p-2 w-75">
+                                        <h4 class="card-title text-warning">Chop 'n' Change</h4>
+                                        <h6 class="card-subtitle mb-2">Full Stack MERN</h6>
+                                    </div>
                                 </a>
-                                <p class="card-text text-light"><a class="text-right text-decoration-none text-white" target="_blank" href="https://github.com/jsharples777/week-05-homework">What's in the kitchen today? <i class="fab fa-github"></i></a></p>
+                                <p class="card-text text-light bg-dark p-2 w-75"><a
+                                        class="text-right text-decoration-none text-white" target="_blank"
+                                        href="https://github.com/jsharples777/week-05-homework">What's in the kitchen
+                                    today? <i class="fab fa-github"></i></a></p>
                             </div>
                         </div>
                     </div>
@@ -53,10 +62,15 @@
                             <div class="card-img-overlay text-white d-flex flex-column justify-content-center">
 
                                 <a class="text-decoration-none" href="https://week-06-homework.herokuapp.com/">
-                                    <h4 class="card-title text-info">Weather Tracker</h4>
-                                    <h6 class="card-subtitle mb-2">Bulma CSS, Express, React, Node.js</h6>
+                                    <div class="bg-dark p-2 w-75">
+                                        <h4 class="card-title text-info">Weather Tracker</h4>
+                                        <h6 class="card-subtitle mb-2">Bulma CSS, Express, React, Node.js</h6>
+                                    </div>
                                 </a>
-                                <p class="card-text text-light"><a class="text-right text-decoration-none text-white" target="_blank" href="https://github.com/jsharples777/week-05-homework">What's the weather going to be like? <i class="fab fa-github"></i></a></p>
+                                <p class="card-text text-light bg-dark p-2 w-75"><a
+                                        class="text-right text-decoration-none text-white" target="_blank"
+                                        href="https://github.com/jsharples777/week-05-homework">What's the weather going
+                                    to be like? <i class="fab fa-github"></i></a></p>
 
                             </div>
                         </div>
@@ -66,25 +80,33 @@
                 <div class="row pb-sm-0 pb-md-2">
                     <div class="col-sm-12 col-md-6 pb-sm-2">
                         <div class="card">
-                            <img class="card-img" src="/img/dayplanner.jpg" alt="Day Planner"/>
+                            <img class="card-img" src="/img/tech-blog.jpg" alt="Tech Blog"/>
                             <div class="card-img-overlay text-white d-flex flex-column justify-content-center">
-                                <a class="text-decoration-none" href="https://week-05-homework.herokuapp.com/">
-                                    <h4 class="card-title text-dark">Plan your day </h4>
-                                    <h6 class="card-subtitle mb-2">Full Stack MERN with GraphQL </h6>
+                                <a class="text-decoration-none" href="https://tech-blog-jps.herokuapp.com/">
+                                    <div class="bg-dark p-2 w-75">
+                                        <h4 class="card-title text-info">Tech Blog</h4>
+                                        <h6 class="card-subtitle mb-2">Full Stack with MySQL and Socket.io </h6>
+                                    </div>
                                 </a>
-                                <p class="card-text text-black-50"><a class="text-right text-decoration-none text-black-50" target="_blank" href="https://github.com/jsharples777/week-05-homework">What can I get done today? <i class="fab fa-github"></i></a></p>
+                                <p class="card-text text-light bg-dark p-2 w-75"><a
+                                        class="text-right text-decoration-none text-white" target="_blank"
+                                        href="https://github.com/jsharples777/tech-blog-jps">Let's talk about technology together <i class="fab fa-github"></i></a></p>
                             </div>
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-6 pb-sm-2">
                         <div class="card">
-                            <img class="card-img" src="/img/javascriptquiz.jpg" alt="Javascript Quiz"/>
+                            <img class="card-img" src="/img/imboard.jpg" alt="I'm Board"/>
                             <div class="card-img-overlay text-white d-flex flex-column justify-content-center">
-                                <a class="text-decoration-none" href="https://week-04-homework.herokuapp.com/">
-                                    <h4 class="card-title text-white">Javascript Quiz</h4>
-                                    <h6 class="card-subtitle mb-2">Bootstrap 4, React</h6>
+                                <a class="text-decoration-none" href="https://im-board-beta.herokuapp.com/">
+                                    <div class="bg-dark p-2 w-75">
+                                        <h4 class="card-title text-white">I'm Board</h4>
+                                        <h6 class="card-subtitle mb-2">Full Stack with GraphQL, WebRTC, Socket.io</h6>
+                                    </div>
                                 </a>
-                                <p class="card-text text-dark"><a class="text-right text-decoration-none text-black-50" target="_blank" href="https://github.com/jsharples777/week-05-homework">How well do I know my Javascript? <i class="fab fa-github"></i></a></p>
+                                <p class="card-text text-light bg-dark p-2 w-75"><a
+                                        class="text-right text-decoration-none text-white" target="_blank"
+                                        href="https://github.com/jsharples777/im-board">Let's get together remotely and play a game <i class="fab fa-github"></i></a></p>
                             </div>
                         </div>
                     </div>
@@ -92,7 +114,7 @@
             </div>
         </div>
     </div>
-    <div class="row pb-4">
+    <div class="row pb-4 mb-4">
         <div id="contactme" class="col-sm-12 col-md-3 border-dark border-right">
             <h1 class="text-dark text-left">Contact Me</h1>
         </div>
@@ -107,7 +129,8 @@
                     </div>
                     <div class="col-2">
                         <span class="align-middle">
-                            <a class="text-right text-black" target="_blank" href="https://github.com/jsharples777"><i class="fab fa-github"></i></a>
+                            <a class="text-right text-black" target="_blank" href="https://github.com/jsharples777"><i
+                                    class="fab fa-github"></i></a>
                         </span>
                     </div>
                     <div class="col-2">
