--- a/backend/views/partials/header-main.handlebars
+++ b/backend/views/partials/header-main.handlebars
@@ -1,13 +1,9 @@
 <head>
     <title>Dr Jim Sharples Profile</title>
 
-    <link
-            href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-            rel="stylesheet"
-    />
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" href="/dist/css/bootstrap.css">
     <link rel="stylesheet" href="./css/App.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="rolling-dices.svg">
 </head>
