--- a/backend/views/partials/js-main.handlebars
+++ b/backend/views/partials/js-main.handlebars
@@ -1,8 +1,10 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-<script src="/dist/jquery.min.js"></script>
-<script src="/dist/bootstrap.min.js"></script>
+<script src="/dist/js/jquery.min.js"></script>
+<script src="/dist/js/bootstrap.js"></script>
 <!--<script src="/dist/react.production.min.js"></script>-->
-<!--<script src="/dist/react.dom.production.min.js"></script>-->
+<!--<script src="/dist/react-dom.production.min.js"></script>-->
+<!--<script src="/dist/react.development.js"></script>-->
+<!--<script src="/dist/react-dom.development.js"></script>-->
 <!--<script src="/dist/react-router.min.js"></script>-->
 <!--<script src="/dist/react-router-dom.min.js"></script>-->
 
